GIGHUB/force-app/main/default/objects/Freelancer_Skill__c/Freelancer_Skill__c.object-meta.xml
<CustomObject>
    <label>Freelancer Skill</label>
    <nameField>
        <label>Freelancer Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freelancer Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>