GIGHUB/force-app/main/default/objects/Freelancer_Skill__c/fields/Freelancer__c.field-meta.xml
<CustomField>
    <fullName>Freelancer__c</fullName>
    <label>Freelancer</label>
    <referenceTo>Free__c</referenceTo>
    <relationshipLabel>Freelancer Skills</relationshipLabel>
    <relationshipName>Freelancer_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>