GIGHUB/force-app/main/default/objects/Freelancer_Skill__c/fields/Skill_c__c.field-meta.xml
<CustomField>
    <fullName>Skill_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Freelancer Skills (Skill)</relationshipLabel>
    <relationshipName>Freelancer_Skills1</relationshipName>
    <type>Lookup</type>
</CustomField>